--- a/src/Server/Auth Server/DigitalWorldAuth.xaml
+++ b/src/Server/Auth Server/DigitalWorldAuth.xaml
@@ -50,9 +50,32 @@
         </Grid>
         
         <!-- Botões -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,12,12">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,12,41">
             <Button Content="Iniciar" Height="28" Width="90" Margin="0,0,10,0" Name="btnListen" Click="btnStart_Click" />
             <Button Content="Parar" Height="28" Width="90" Name="btnStop" Click="btnStop_Click" />
         </StackPanel>
+        
+        <!-- StatusBar com controle de criptografia -->
+        <StatusBar Grid.Row="2" Height="29" VerticalAlignment="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="Auth Server" />
+            </StatusBarItem>
+            <Separator/>
+            <StatusBarItem>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkEncryption" 
+                              Content="Criptografia" 
+                              IsChecked="True"
+                              Checked="chkEncryption_Changed"
+                              Unchecked="chkEncryption_Changed"
+                              Margin="0,0,5,0"/>
+                    <TextBlock Name="txtEncryptionStatus" 
+                               Text="ATIVA" 
+                               Foreground="LimeGreen"
+                               FontWeight="Bold"
+                               Margin="5,0,0,0"/>
+                </StackPanel>
+            </StatusBarItem>
+        </StatusBar>
     </Grid>
 </Window>
