--- a/src/Server/Digital World/Digital World.xaml
+++ b/src/Server/Digital World/Digital World.xaml
@@ -11,9 +11,34 @@
         <Menu Height="23" VerticalAlignment="Top" Margin="0,0,0,0">
             <MenuItem Header="Options" Name="mi_opt" Click="mi_opt_Click" />
         </Menu>
-        <Button Content="Start" Height="23" HorizontalAlignment="Right" Margin="0,0,90,9" Name="bStart" VerticalAlignment="Bottom" Width="75" Click="bStart_Click" />
-        <Button Content="Stop" Height="23" HorizontalAlignment="Right" Margin="0,0,9,9" Name="bStop" VerticalAlignment="Bottom" Width="75" Click="bStop_Click" />
-        <GroupBox Header="Console" Height="65" Margin="211,0,9,38" VerticalAlignment="Bottom">
+        <Button Content="Start" Height="23" HorizontalAlignment="Right" Margin="0,0,90,38" Name="bStart" VerticalAlignment="Bottom" Width="75" Click="bStart_Click" />
+        <Button Content="Stop" Height="23" HorizontalAlignment="Right" Margin="0,0,9,38" Name="bStop" VerticalAlignment="Bottom" Width="75" Click="bStop_Click" />
+        
+        <!-- Status Bar com Criptografia -->
+        <StatusBar Height="23" VerticalAlignment="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="Digital World Server" />
+            </StatusBarItem>
+            <Separator/>
+            <StatusBarItem>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="chkEncryption" 
+                              Content="Criptografia" 
+                              IsChecked="True"
+                              Checked="chkEncryption_Changed"
+                              Unchecked="chkEncryption_Changed"
+                              VerticalAlignment="Center"
+                              Margin="5,0"/>
+                    <TextBlock Name="txtEncryptionStatus" 
+                               Text="ATIVA" 
+                               Foreground="LimeGreen"
+                               FontWeight="Bold"
+                               VerticalAlignment="Center"
+                               Margin="5,0"/>
+                </StackPanel>
+            </StatusBarItem>
+        </StatusBar>
+        <GroupBox Header="Console" Height="65" Margin="211,0,9,67" VerticalAlignment="Bottom">
             <Grid>
                 <TextBox Height="23" Margin="10,10,87,0" Name="tConsole" VerticalAlignment="Top" />
                 <Button Content="Send" Height="23" HorizontalAlignment="Right" Margin="0,10,6,0" Name="btnSend" VerticalAlignment="Top" Width="75" Click="btnSend_Click" />
